<resources>
    <string name="app_name">Go</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="visitor">訪客</string>
    <string name="account">信箱：</string>
    <string name="password">密碼：</string>
    <string name="forgetPassword">忘記密碼</string>
    <string name="nickname">暱稱：</string>
    <string name="confirmPasseord">確認密碼：</string>
    <string name="existingAccount">已有帳號</string>
    <string name="confirmforgetPw">確認</string>
    <string name="forgetPwReturn">返回登入</string>
    <string name="logintext">會員登入</string>
    <string name="registertext">會員註冊</string>
    <string name="history">歷史紀錄</string>
    <string name="favourite">我的最愛</string>
    <string name="timeText">選擇時間</string>
</resources>
