<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="164dp"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/logintext"
        android:textColor="#7AC09A"
        android:textSize="35dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_small" />

    <TextView
        android:id="@+id/TextViewLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/account"
        android:textColor="#4B4B4B"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toStartOf="@+id/accountLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/TextViewLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewLogin1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/password"
        android:textColor="#4B4B4B"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toStartOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewLogin1" />

    <EditText
        android:id="@+id/accountLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorLightGreen"
        app:layout_constraintStart_toEndOf="@+id/TextViewLogin1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorLightGreen"
        app:layout_constraintBottom_toTopOf="@+id/login_signin"
        app:layout_constraintStart_toEndOf="@+id/TextViewLogin2"
        app:layout_constraintTop_toBottomOf="@+id/accountLogin" />

    <Button
        android:id="@+id/login_register"
        android:layout_width="144dp"
        android:layout_height="66dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="62dp"
        android:background="#7AC09A"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintBottom_toTopOf="@+id/forgetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="144dp"
        android:layout_height="66dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="135dp"
        android:layout_toStartOf="@+id/login_signin"
        android:background="#7AC09A"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/forgetPassword"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toStartOf="@+id/login_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_register" />

    <Button
        android:id="@+id/login_signin"
        android:layout_width="138dp"
        android:layout_height="141dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="60dp"
        android:background="#7AC09A"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <include
        layout="@layout/bottom_navigation"
        android:visibility="invisible"></include>

</RelativeLayout>