<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_small" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="173dp"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/forgetPassword"
        android:textColor="#7AC09A"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextViewLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/account"
        android:textColor="#4B4B4B"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toStartOf="@+id/accountForget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/accountForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/TextViewLogin1"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/go_signin"
        app:layout_constraintStart_toEndOf="@+id/TextViewLogin1" />

    <Button
        android:id="@+id/forgetconfirm"
        android:layout_width="144dp"
        android:layout_height="61dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="100dp"
        android:layout_toStartOf="@+id/go_signin"
        android:background="#7AC09A"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/confirmforgetPw"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toStartOf="@+id/go_signin"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/go_signin"
        android:layout_width="144dp"
        android:layout_height="61dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="#7AC09A"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/forgetPwReturn"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation" />

    <include
        layout="@layout/bottom_navigation"></include>

</RelativeLayout>