<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="357dp"
        android:layout_height="208dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <Button
        android:id="@+id/login"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="124dp"
        android:background="#7AC09A"
        android:backgroundTint="#7AC09A"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/register"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="119dp"
        android:background="#7AC09A"
        android:backgroundTint="#7AC09A"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/visitor"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="124dp"
        android:background="#7AC09A"
        android:backgroundTint="#7AC09A"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/microsoft_jhenghei"
        android:text="@string/visitor"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:fontFamily="@font/microsoft_jhenghei"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/regionText"
        android:layout_width="111dp"
        android:layout_height="37dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="73dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/regionText" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="17dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/location" />

</androidx.constraintlayout.widget.ConstraintLayout>